- Uitlijning funproducten is nu correct

--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -373,34 +373,40 @@
                 font-weight:bold;
             }
             .dimensions {
-                padding:20px 20px 20px 262px;
+                padding:20px 20px 20px 344px;
                 font-weight:bold;
                 color:white;
                 justify-content: flex-start;
                 background:url('../img/layout/Hoogstraten_Digitale-downloads_webshop_10.png');
             }
             
+            @media only screen and (max-width: 1899px) {
+                .dimensions {
+                    padding-left:244px;
+                }
+            }
+            
             @media only screen and (max-width: 1599px) {
                 .dimensions {
-                    padding-left:200px;
+                    padding-left:180px;
                 }
             }
             
             @media only screen and (max-width: 1199px) {
                 .dimensions {
-                    padding-left:170px;
+                    padding-left:150px;
                 }
             }
             
             @media only screen and (max-width: 991px) {
                 .dimensions {
-                    padding-left:150px;
+                    padding-left:130px;
                 }
             }
             
             @media only screen and (max-width: 768px) {
                 .dimensions {
-                    padding-left:100px;
+                    padding-left:80px;
                 }
             }
             
@@ -416,6 +422,12 @@
             
             .product-description {
                 font-size:18px;
+            }
+            
+            @media only screen and (min-width: 1899px) {
+                .product-image {
+                    width: 267px;
+                }
             }
         }
         
