--- a/src/webroot/css/less/login.less
+++ b/src/webroot/css/less/login.less
@@ -226,10 +226,11 @@
                 .login-action-star-message {
                     position: absolute;
                     top: 30%;
-                    left: 36%;
+                    left: 38%;
                     width: 40%;
                     color: white;
-                    /*font-size: 1em;*/
+                    font-weight: bold;
+                    font-size: 1.2em;
                 }
                 img {
                     width: 100%;
