--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -307,16 +307,17 @@
             
             .photos-vertical-overlay {
                 height: 101%;
-            }
-            .selected-product-overlay {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
-                background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-                background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
-            }
+            }            
+        }
+        
+        .selected-product-overlay {
+            position: absolute;
+            width: 96%;
+            height: 110%;
+            top: -5%;
+            left: 2%;
+            border: 2px solid #00b4ff;
+            border-radius: 5px;
         }
     }
 }
@@ -798,7 +799,7 @@
     }
     .photos-view-products-fixed {
         position: fixed;
-        top: 97px;
+        top: 80px;
         margin-left: -17px;
         width: 392.5px;
         border-left: 2px solid #b5b5b5;
