--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -276,6 +276,10 @@
             .order-total {
                 margin-top: 10px;
             }
+            .order-korting {
+                font-weight: bold;
+                color: #00b900;
+            }
         }
         
     }
