Je kan nu coupon codes toepassen op de winkelwagen op de winkelwagen overzicht.

--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -264,9 +264,17 @@
         background: #f0f0f0;
     }
     
+    .add-coupon {
+        margin-top: 10px;
+        
+        .input, .submit {
+            display:inline;
+        }
+    }
+    
     .order-summary {
         
-        margin-top: 20px;
+        margin-top: 10px;
         margin-bottom: 100px;
         padding-top: 30px;
         border-top: 1px solid #b5b5b5;
