Coupon code toevoegen elementen verplaatst naar rechterkolom op winkelwagen overzicht

--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -264,14 +264,6 @@
         background: #f0f0f0;
     }
     
-    .add-coupon {
-        margin-top: 10px;
-        
-        .input, .submit {
-            display:inline;
-        }
-    }
-    
     .order-summary {
         
         margin-top: 10px;
@@ -309,6 +301,20 @@
         .cart-order-details-message {
             padding: 3%;
             font-size: 0.9em;
+        }
+        
+        .add-coupon {
+            margin-top:10px;
+            padding:3%;
+
+            .input, .submit {
+                display:inline-block;
+            }
+            
+            .input {
+                width:200px;
+                vertical-align:middle;
+            }
         }
     }
 }
